<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_air_quality"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_co"
            android:layout_weight="4"/>
        <ProgressBar
            android:layout_weight="1"
            android:id="@+id/co_progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="4"
            android:id="@+id/co_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_so2"/>
        <ProgressBar
            android:id="@+id/so2_progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/so2_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_o3"/>
        <ProgressBar
            android:id="@+id/o3_progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/o3_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_no2"/>
        <ProgressBar
            android:id="@+id/no2_progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/no2_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_pm"/>
        <ProgressBar
            android:id="@+id/pm_progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/pm_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>